# cuda_vision

./: .gitignore  README.md  README.md.save
ass_1_cudatest/build-cudatest-Desktop-Default/: CMakeCache.txt  Makefile  cmake_install.cmake  cudatest  cudatest.cbp
ass_1_cudatest/build-matrices-Desktop-Default/: CMakeCache.txt  Makefile  cmake_install.cmake  matrices  matrices.cbp
ass_1_cudatest/cudatest/: CMakeLists.txt  axpycpu.cpp  axpycpu.h  main.cpp
ass_1_cudatest/matrices/: CMakeLists.txt  addcpu.cpp  addcpu.h  addgpu.cu  addgpu.h  main.cpp
ass_1_cudatest/test_cpu/: CMakeLists.txt  main.cpp
ass_2_datasets/: generate_datasets_old.ipynb  generating_datasets.ipynb  generating_datasets.py  generating_datasets_new_python.ipynb  generating_datasets_new_python.py  multiplied_test.txt  test.txt
ass_2_datasets/.ipynb_checkpoints/: generate_datasets_old-checkpoint.ipynb  (+1 more)
ass_2_datasets/modify_data/: CMakeLists.txt  main.cpp  multiplier.cu  multiplier.h
ass_3_caffee/: classes1.txt  classes2.txt  classes3.txt  dataset.txt  dataset1.txt  dataset2.txt  dataset3.txt  good_dataset.txt  multivariate_dataset.ipynb  plotting_result.ipynb  plotting_result.py  test_classes1.txt  test_dataset.txt  test_dataset1.txt  test_dataset2.txt  test_dataset3.txt  train.txt
ass_4_nearest_neighbor/: Untitled0.ipynb  display_mnist.ipynb
ass_5_layers/: display_error.ipynb  errors.txt
ass_5_layers/logreg_binary/: CMakeLists.txt  main.cpp
ass_6_cnn/: display_error.ipynb
ass_7_protobuf/: Untitled.ipynb  solving_lenet.py
ass_7_protobuf/mnist_protobuf/: CMakeLists.txt  mnist_test.cpp  mnist_train.cpp
ass_8_finetuning/: bvlc_solver.prototxt  bvlc_train.py  bvlc_train_val.prototxt  cifar10_tuning.py  finetune_cifar10.prototxt  finetune_cifar10_solver.prototxt  flickr_tuning.py
(+69 files in other folders)
